--- a/source/blog/201003.rst
+++ b/source/blog/201003.rst
@@ -4,6 +4,10 @@ Blog of Mar 2010
 
 .. _blog_201003:
 
+2010-03-02
+-----------
+
+I updated my kernel to 26.33 with PAE turned on tonight.
 
 
 .. include:: ../include/comments.rst
