--- a/source/blog/201003.rst
+++ b/source/blog/201003.rst
@@ -4,6 +4,12 @@ Blog of Mar 2010
 
 .. _blog_201003:
 
+2010-03-14
+-----------
+
+I buy a new laptop(lenovo T400 2767 R38) today.
+
+
 2010-03-02
 -----------
 
